--- a/eTools Ultimate/Resources/Translations.fr-FR.resx
+++ b/eTools Ultimate/Resources/Translations.fr-FR.resx
@@ -1146,4 +1146,16 @@
     <value>Supprimer</value>
     <comment>Remove button tooltip</comment>
   </data>
+  <data name="AII_ Assignment - Mover Page" xml:space="preserve">
+    <value>AII_ Attribution - Page Mover</value>
+    <comment>AII_ Assignment - Mover Page section title</comment>
+  </data>
+  <data name="Available Resources" xml:space="preserve">
+    <value>Ressources disponibles</value>
+    <comment>Available Resources list header</comment>
+  </data>
+  <data name="Assigned Resources" xml:space="preserve">
+    <value>Ressources assignées</value>
+    <comment>Assigned Resources list header</comment>
+  </data>
 </root>
