Update AI Assignment label and reorder sections
Renamed the translation key 'AII_ Assignment - Mover Page' to 'AII_ Assignment' in German and French resource files for consistency. In ResourcePathPage.xaml, updated the label to use the new key and moved the Skill section below the AI Assignment section to improve logical grouping.

--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -1147,9 +1147,9 @@
     <value>Flächenziel</value>
     <comment>AOE Target option</comment>
   </data>
-  <data name="AII_ Assignment - Mover Page" xml:space="preserve">
-    <value>AII_ Zuordnung - Mover Seite</value>
-    <comment>AII_ Assignment - Mover Page section title</comment>
+  <data name="AII_ Assignment" xml:space="preserve">
+    <value>AII_ Zuordnung</value>
+    <comment>AII_ Assignment section title</comment>
   </data>
   <data name="Available Resources" xml:space="preserve">
     <value>Verfügbare Ressourcen</value>
