--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -1199,4 +1199,68 @@
     <value>Anwendung beenden</value>
     <comment>Error dialog button to close application</comment>
   </data>
+  <data name="eTools Ultimate - Update Checker" xml:space="preserve">
+    <value>eTools Ultimate - Update Checker</value>
+    <comment>Update window title</comment>
+  </data>
+  <data name="Software Update Checker" xml:space="preserve">
+    <value>Software Update Checker</value>
+    <comment>Update window main title</comment>
+  </data>
+  <data name="Check for available updates for eTools Ultimate" xml:space="preserve">
+    <value>Überprüfen Sie auf verfügbare Updates für eTools Ultimate</value>
+    <comment>Update window subtitle</comment>
+  </data>
+  <data name="Current Version" xml:space="preserve">
+    <value>Aktuelle Version</value>
+    <comment>Current version label</comment>
+  </data>
+  <data name="Click the button below to check for updates. The application will automatically download and install the latest version from GitHub." xml:space="preserve">
+    <value>Klicken Sie auf den Button unten, um nach Updates zu suchen. Die Anwendung wird automatisch die neueste Version von GitHub herunterladen und installieren.</value>
+    <comment>Update check description</comment>
+  </data>
+  <data name="Check for Updates" xml:space="preserve">
+    <value>Nach Updates suchen</value>
+    <comment>Check for updates button text</comment>
+  </data>
+  <data name="Checking for updates..." xml:space="preserve">
+    <value>Suche nach Updates...</value>
+    <comment>Loading state text</comment>
+  </data>
+  <data name="🎉 New Update Available!" xml:space="preserve">
+    <value>🎉 Neues Update verfügbar!</value>
+    <comment>Update available title</comment>
+  </data>
+  <data name="Version {0} available" xml:space="preserve">
+    <value>Version {0} verfügbar</value>
+    <comment>New version available text</comment>
+  </data>
+  <data name="This update contains new features and improvements." xml:space="preserve">
+    <value>Dieses Update enthält neue Features und Verbesserungen.</value>
+    <comment>Default update description</comment>
+  </data>
+  <data name="Install Update Now" xml:space="preserve">
+    <value>Update jetzt installieren</value>
+    <comment>Install update button text</comment>
+  </data>
+  <data name="You already have the latest version!" xml:space="preserve">
+    <value>Sie haben bereits die neueste Version!</value>
+    <comment>No update available message</comment>
+  </data>
+  <data name="Error checking for updates" xml:space="preserve">
+    <value>Fehler beim Überprüfen der Updates</value>
+    <comment>Error message title</comment>
+  </data>
+  <data name="eTools Ultimate is automatically updated via GitHub" xml:space="preserve">
+    <value>eTools Ultimate wird automatisch über GitHub aktualisiert</value>
+    <comment>Footer info text</comment>
+  </data>
+  <data name="© 2025 eTools Ultimate. All rights reserved." xml:space="preserve">
+    <value>© 2025 eTools Ultimate. Alle Rechte vorbehalten.</value>
+    <comment>Copyright text</comment>
+  </data>
+  <data name="Error displaying update information: {0}" xml:space="preserve">
+    <value>Fehler beim Anzeigen der Update-Informationen: {0}</value>
+    <comment>Error message for update display</comment>
+  </data>
 </root>
